<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:drawableEnd="@drawable/ic_ac"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andika"
        android:text="@string/weltex"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />


    <Button
        android:id="@+id/about"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:drawableEnd="@drawable/andelasy"
        android:background="@color/yellow"
        android:text="@string/abt" />

    <Button
        android:id="@+id/profile"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:drawableEnd="@drawable/ic_person"
        android:layout_marginTop="22dp"
        android:text="@string/pro"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent" />



</LinearLayout>