<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay"
    android:scrollbarSize="7dp"
    tools:context=".profile">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pas" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/trac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Track:"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Android"
                android:layout_toRightOf="@id/trac"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/count"
                android:layout_below="@id/trac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cou"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/sier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sie"
                android:layout_below="@id/and"
                android:layout_toRightOf="@id/count"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:layout_below="@id/count"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/ahme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ahmedvandy@gmail.com"
                android:layout_below="@id/sier"
                android:layout_toRightOf="@id/email"
                android:autoLink="email"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/pho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone  Number:"
                android:layout_below="@id/email"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/numb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+23279522721"
                android:autoLink="phone"
                android:layout_below="@id/ahme"
                android:layout_toRightOf="@id/pho"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/slac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Slack Username:"
                android:layout_below="@id/pho"
                android:layout_margin="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/na"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slackname"
                android:layout_below="@id/pho"
                android:layout_toRightOf="@id/slac"
                android:layout_margin="10dp"
                android:textSize="20sp"/>

            <RatingBar
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/na"
                android:layout_marginStart="100dp"
                android:rating="4.5" />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>